platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_124.platter
start() {
    int sum = 24 + 26;
        bill(tochars(sum));
}
